--- a/index.html
+++ b/index.html
@@ -4,16 +4,56 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entercept</title>
+    <title>Foundation for Sites</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/entercept.css">
   </head>
   <body>
+  <div class="top">
+    <div class="row">
+      <div class="large-3 small-12 columns">
+        <div id="logo">
+                  <img src="img/logo.svg">
+                </div>
+      </div>
+      <div class="large-9 columns"></div>
+    </div>
+      <div class="row">
+        <div class="large-8 small-12 columns">
+          <div id="text-row">
+                    <h1>A data-based strategy and innovation firm located in Chicago, Illinois.</h1>
+          </div>
+        </div>
+          <div class="large-3 columns"></div>
+    </div>
+    <div class="row">
+      <div class="large-8 small-12 columns">
+        <div id="text-row">
+                  <h3>Lucas ipsum dolor sit amet jango darth obi-wan kessel chewbacca binks jango luuke binks kessel. C-3p0 mon binks biggs darth yoda solo moff. Gamorrean kenobi ahsoka tusken raider obi-wan leia mothma moff. </h3>
+        </div>
+      </div>
+        <div class="large-3 columns"></div>
+  </div>
+  <div class="row">
+    <div class="large-12 small-12 columns">
+      <div id="contact-button">Contact Us</div>
+      </div>
+    </div>
+</div>
+  </div>
+  <div class="middle"></div>
+  <div class="bottom">
 
+    <div class="row">
+      <div class="large-12 small-12 columns">
+        <div id="footer-text">
+                  <h5>&copy 2017 Entercept. All rights reserved.</h5>
+        </div>
+      </div>
+  </div>
 
-<div class="logo"><img src="img/logo.svg"></div>
-
+  </div>
 
 
     <script src="js/vendor/jquery.js"></script>
