--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
   <div class="row">
     <div class="large-12 small-12 columns">
-      <div id="contact-button">Contact Us</div>
+      <a href="mailto:info@entercept.net" target="_top"><div id="contact-button">Contact Us</div></a>
       </div>
     </div>
 </div>
