--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="large-7 small-12 columns">
           <div id="text-row">
-                    <h1>A data-based strategy and innovation firm located in Chicago, Illinois.</h1>
+                    <h1>A technology strategy and innovation firm located in Chicago, Illinois.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
