--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                  <h3>Lucas ipsum dolor sit amet jango darth obi-wan kessel chewbacca binks jango luuke binks kessel. C-3p0 mon binks biggs darth yoda solo moff. Gamorrean kenobi ahsoka tusken raider obi-wan leia mothma moff. </h3>
+                      <h3>We help companies solve buiness problems that go beyond the surface. We use data to optimize processes and poducts to better serve you and your clients. </h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
