--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                      <h3>We help companies solve buiness problems that go beyond the surface. We use data to optimize processes and poducts to better serve you and your clients. </h3>
+                      <h3>We help companies solve buiness problems that go beyond the surface. Using data, we optimize processes and poducts to better serve you and your clients. From parterning with startups to major financial companies our goal is to get you to yours.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
