--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </script>
   </head>
   <body>
+    <div class="middle"></div>
   <div class="top">
     <div class="row">
       <div class="large-3 small-12 columns">
