--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="large-7 small-12 columns">
           <div id="text-row">
-                    <h1>A Chicago based technology and innovation consultancy.</h1>
+                    <h1>Creating Impact Backed by Data</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                 <h3>We create impact backed by data. </h3>
+                 <h3>A Chicago based technology and innovation consultancy.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
