--- a/index.html
+++ b/index.html
@@ -27,7 +27,29 @@
                   <img src="img/logo.svg">
                 </div>
       </div>
-
+      <div class="large-9 columns"></div>
+    </div>
+      <div class="row">
+        <div class="large-7 small-12 columns">
+          <div id="text-row">
+                    <h1></h1>
+          </div>
+        </div>
+          <div class="large-5 columns"></div>
+    </div>
+    <div class="row">
+      <div class="large-8 small-12 columns">
+        <div id="text-row">
+                      <h3></h3>
+        </div>
+      </div>
+        <div class="large-3 columns"></div>
+  </div>
+  <div class="row">
+    <div class="large-12 small-12 columns">
+      
+      </div>
+    </div>
 
     <div class="row">
       <div class="large-12 small-12 columns">
