--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </script>
   </head>
   <body>
+    <div class="middle"></div>
   <div class="top">
     <div class="row">
       <div class="large-3 small-12 columns">
@@ -32,7 +33,7 @@
       <div class="row">
         <div class="large-7 small-12 columns">
           <div id="text-row">
-                    <h1></h1>
+                    <h1>Creating greater impact backed by data-driven results.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
@@ -40,14 +41,14 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                      <h3></h3>
+                 <h3>We are a Chicago based technology and innovation consultancy started in 2015. Our focus is on utilizing emerging technologies in mobile-first solutions for the enterprise.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
   </div>
   <div class="row">
     <div class="large-12 small-12 columns">
-      
+      <a href="mailto:info@entercept.net" target="_top"><div id="contact-button">Contact Us</div></a>
       </div>
     </div>
 
