--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="middle"></div>
   <div class="top">
     <div class="row">
-      <div class="large-3 small-12 columns">
+      <div class="large-3 medium-6 small-9 columns">
         <div id="logo">
                   <img src="img/logo.svg">
                 </div>
