--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="large-7 small-12 columns">
           <div id="text-row">
-                    <h1>Creating greater impact backed by data-driven results.</h1>
+                    <h1>Creating greater impact in communities and the enterprise backed by data.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                 <h3>We are a Chicago based technology and innovation consultancy started in 2015. Our focus is on utilizing emerging technologies in mobile-first solutions.</h3>
+                 <h3>Entercept is a Chicago based technology and innovation consultancy founded in 2015. Our focus is on utilizing data and emerging technologies in mobile-first solutions.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
