--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="large-7 small-12 columns">
           <div id="text-row">
-                    <h1>Creating greater impact in communities and the enterprise backed by data.</h1>
+                    <h1>Using data to create greater impact in communities and the enterprise.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
