--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                 <h3>Entercept is a Chicago based technology and innovation consultancy founded in 2015. Our focus is on utilizing data and emerging technologies in mobile-first solutions.</h3>
+                 <h3>Entercept is a Chicago based technology and innovation consultancy started in 2015. Our focus is on using emerging technologies in mobile-first solutions.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
