--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="large-7 small-12 columns">
           <div id="text-row">
-                    <h1> Utilizing technology to help small teams, with big ideas, scale effectively.</h1>
+                    <h1> Using technology to help teams scale effectively.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                 <h3>Entercept is a Chicago based technology and innovation consultancy started in 2015. Our focus is on using emerging technologies in mobile-first solutions.</h3>
+                 <h3>Entercept is a Chicago based technology and innovation consultancy founded in 2015. We focus on using emerging technologies in mobile-first solutions.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
