--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <div class="large-9 columns"></div>
     </div>
       <div class="row">
-        <div class="large-8 small-12 columns">
+        <div class="large-12 small-12 columns">
           <div id="text-row">
-                    <h1> Using technology to help teams scale effectively.</h1>
+                    <h1>It's time to rethink your technology strategy.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
@@ -60,14 +60,15 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                 <h3>Entercept is a Chicago based technology and innovation consultancy founded in 2015. We focus on building a strategy that utilizes emerging technologies in mobile-first solutions.</h3>
+                 <h3>Entercept is a Chicago based technology and innovation firm founded in 2015. We focus on building strategy that utilizes emerging technologies in mobile-first solutions.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
   </div>
   <div class="row">
     <div class="large-12 small-12 columns">
-      <a href="mailto:info@entercept.net" target="_top"><div id="contact-button">Contact Us</div></a>
+      <a href="https://medium.com/@entercept"><button id="learn-button">Learn More</button></a>
+      <a href="mailto:info@entercept.net" target="_top"><button id="contact-button">Contact Us</button></a>
       </div>
     </div>
 
