--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="large-12 small-12 columns">
           <div id="text-row">
-                    <h1>It's time to rethink your technology strategy.</h1>
+                    <h1>Using technology to help teams scale effectively.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
@@ -67,7 +67,6 @@
   </div>
   <div class="row">
     <div class="large-12 small-12 columns">
-      <a href="https://medium.com/@entercept"><button id="learn-button">Learn More</button></a>
       <a href="mailto:info@entercept.net" target="_top"><button id="contact-button">Contact Us</button></a>
       </div>
     </div>
