--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <div class="large-9 columns"></div>
     </div>
       <div class="row">
-        <div class="large-12 small-12 columns">
+        <div class="large-7 medium-8 small-12 columns">
           <div id="text-row">
-                    <h1>Using technology to help organizations be more effective.</h1>
+                    <h1>Using technology to help organizations become more effective.</h1>
           </div>
         </div>
           <div class="large-5 columns"></div>
