--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="large-8 small-12 columns">
         <div id="text-row">
-                 <h3>Entercept is a Chicago-based technology and innovation firm founded in 2015. We focus on building data-driven strategies that utilize emerging technologies in mobile-first solutions.</h3>
+                 <h3>We are a Chicago-based technology and innovation firm founded in 2015. Our focus is on building data-driven strategies that utilize emerging technologies in business solutions.</h3>
         </div>
       </div>
         <div class="large-3 columns"></div>
