--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="row">
       <div class="large-7 small-12 columns">
         <div id="text-row">
-                 <h3>We empower people and organizations with strategic thinking, data, and technology to solve problems and to affect change around the globe.</h3>
+                 <h3>We empower people and organizations with strategy, data, and technology to solve problems and effect change around the globe.</h3>
         </div>
       </div>
         <div class="large-5 columns"></div>
